Fix alignment of Hero block in editor

--- a/private/src/styles/blocks/hero/_editor.scss
+++ b/private/src/styles/blocks/hero/_editor.scss
@@ -1,6 +1,8 @@
 [data-type="amnesty-core/hero"] {
+  margin-inline: auto !important;
   max-width: $flexy-container !important;
   width: 100% !important;
+  float: none !important;
 }
 
 [data-type="amnesty-core/hero"] .wp-block {
